--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
     - "./myconfig:/home/weewx/config:rw"
    devices: 
     - "/dev/bus/usb:/dev/bus/usb"
+    - "/dev/i2c-1:/dev/i2c-1"  
    environment:
     - TZ=Europe/Berlin       
